# Smart-Transport-System-for-Cairo

./: .replit  README.md  app.py  pyproject.toml  user_data.json
attached_assets/: Pasted-1-Emergency-Vehicle-Routing-A-Algorithm-Objective-Find-the-fastest-path-for-emergency-vehicles-1746829911050.txt  Pasted-do-this-project-and-don-t-forget-anything-Smart-City-Transportation-Network-Optimization-Project--1746816793253.txt
pages/: comparison.py  economic.py  environmental.py  visualization3d.py  weather.py
src/algorithms/: dp.py  greedy.py  mst.py  shortestpath.py
src/analysis/: economic.py  environmental.py  weather.py
src/data/: loader.py
src/utils/: comparison.py  export.py
src/visualization/: network.py  terrain3d.py
