[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "plotly>=6.0.1",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.0",
    "pandas>=2.2.3",
    "networkx>=3.4.2",
    "folium>=0.19.5",
    "matplotlib>=3.10.3",
    "scipy>=1.15.3",
]
